Added moving background.

--- a/src/containers/MovingBackground.css
+++ b/src/containers/MovingBackground.css
@@ -1,5 +1,6 @@
 .MovingBackground {
     background-position: center;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 400vw 400vh;
+    opacity: 30%;
 }
