--- a/src/components/SignUpButton.css
+++ b/src/components/SignUpButton.css
@@ -2,11 +2,16 @@
     color: white;
     background-color: blue;
     text-decoration: none;
-    border-radius: 2%;
+    border-radius: 5%;
+    min-height: 40px;
+    min-width: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .SignUp:hover {
     color: blue;
     background-color: white;
-    border-radius: 5%;
+    border-radius: 10%;
 }
