Tested adding font

--- a/src/header/components/Logo.css
+++ b/src/header/components/Logo.css
@@ -10,6 +10,9 @@
 
 h1 {
     white-space: nowrap;
+    font-family: industry, sans-serif;
+    font-weight: 700;
+    font-style: normal;
 }
 
 @media screen and (max-width:480px) {
