--- a/src/header/components/Nav.css
+++ b/src/header/components/Nav.css
@@ -8,6 +8,9 @@
 .Nav > * {
     padding: 2.5%;
     white-space: nowrap;
+    font-family: industry, sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .Nav > .SignUp {
