some basic additions in Landing

--- a/src/body/containers/Body.css
+++ b/src/body/containers/Body.css
@@ -1,7 +1,17 @@
-.test {
+.Body {
     background-color: none;
     color: black;
     height: 400vh;
     position: relative;
     z-index: 2;
+    display: flex;
+    flex-direction: column;
+}
+
+.Body > * {
+    flex: 1;
+}
+
+.Body > .Landing {
+    flex: 2;
 }
