--- a/src/shared/containers/MovingBackground.css
+++ b/src/shared/containers/MovingBackground.css
@@ -1,8 +1,8 @@
 .MovingBackground {
     position: relative;
-    background: rgb(44,144,196);
+    background: rgb(0, 0, 0);
     /* Can change gradient here*/
-    background: linear-gradient(185deg, rgba(44,144,196,1) 0%, rgba(239,142,56,1) 50%, rgba(49,204,144,1) 100%);
+    background: linear-gradient(185deg, rgba(0,0,0,1) 0%, rgba(44,144,196,1) 25%, rgba(239,142,56,1) 75%, rgba(49,204,144,1) 100%);
 }
 
 .MovingBackground::before {
@@ -18,6 +18,6 @@
     background-attachment: fixed;
     background-size: 400vw 400vh;
     background-image: var(--before-bg-img);
-    opacity: 50%;
+    opacity: 7%;
     min-height: inherit;
 }
