--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,11 @@
 header {
-  position: sticky;
+  /* position: sticky; */
   top: 0;
   z-index: 3;
 }
 
 .App {
   background-color: black;
+  overflow-x: hidden;
 }
 
