--- a/src/header/components/Nav.scss
+++ b/src/header/components/Nav.scss
@@ -1,3 +1,5 @@
+@import "../../shared/style/font.scss";
+
 .Nav {
     display: flex;
     flex-direction: row;
@@ -8,9 +10,7 @@
 .Nav > * {
     padding: 2.5%;
     white-space: nowrap;
-    font-family: industry, sans-serif;
-    font-weight: 400;
-    font-style: normal;
+    @include industry-simple();
 }
 
 .Nav > .SignUp {
