--- a/src/header/containers/Header.scss
+++ b/src/header/containers/Header.scss
@@ -1,8 +1,14 @@
+@import '../../shared/style/colour-theme.scss';
+
 header {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     padding: 10px;
     max-height: 50px;
-    background-color: gray;
+    background-color: none;
+}
+
+header * {
+    color: $green;
 }
