[FRONT PAGE] coded the about us part

--- a/src/body/components/CommitteeHexagonGrid.scss
+++ b/src/body/components/CommitteeHexagonGrid.scss
@@ -86,21 +86,21 @@ $total: 10;
 	}
 }
 
-@media screen and (min-width: 840px) and (max-width: 1119px) {
-	#{$block} {
-		&__list {
-            --amount: 3;
-			--counter: 1;
-			grid-gap: 1.5rem 3rem;
-		}
+// @media screen and (min-width: 840px) and (max-width: 1119px) {
+// 	#{$block} {
+// 		&__list {
+//             --amount: 3;
+// 			--counter: 1;
+// 			grid-gap: 1.5rem 3rem;
+// 		}
 
-		&__item {
-			@include grid-item(3);
-		}
-	}
-}
+// 		&__item {
+// 			@include grid-item(3);
+// 		}
+// 	}
+// }
 
-@media screen and (min-width: 480px) and (max-width: 839px) {
+@media screen and (min-width: 480px) and (max-width: 1120px) {
 	#{$block} {
 		&__list {
 			--amount: 2;
