--- a/src/body/containers/Body.css
+++ b/src/body/containers/Body.css
@@ -1,7 +1,7 @@
 .Body {
     background-color: none;
     color: black;
-    height: 400vh;
+    min-height: 400vh;
     position: relative;
     z-index: 2;
     display: flex;
