--- a/src/body/components/Timer.scss
+++ b/src/body/components/Timer.scss
@@ -5,6 +5,7 @@
 .Timer {
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin: 0%;
     padding: 10px;
     @include glassmorphism();
@@ -13,7 +14,7 @@
 
 .Timer > * {
     @include industry-bold();
-    opacity: 50%;
+    opacity: 70%;
 }
 
 .Timer h1 {
