--- a/src/body/sections/Landing.scss
+++ b/src/body/sections/Landing.scss
@@ -26,9 +26,13 @@
     background-size: 100vw;
     background-position: center;
     min-width: 100%;
-    min-height:120vh;
+    min-height: 130vh;
     z-index: 0;
     overflow: visible;
+    @media screen and (max-width: 1280px) {
+        background-size: 1000px;
+        min-width: 1000px;
+    }
 }
 
 .landing-col1 {
