--- a/src/body/sections/Landing.scss
+++ b/src/body/sections/Landing.scss
@@ -24,6 +24,7 @@
     position: absolute;
     background-repeat: no-repeat;
     background-size: 100vw;
+    background-clip: unset;
     background-position: center;
     min-width: 100%;
     min-height: 130vh;
