--- a/src/body/sections/Committee.scss
+++ b/src/body/sections/Committee.scss
@@ -1,6 +1,13 @@
+@import '../../shared/style/colour-theme.scss';
+@import '../../shared/style/font.scss';
+
 .Committee {
     max-width: 100%;
-    padding: 20%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    h1 {
+        @include industry_bold();
+        color: $blue;
+    }
 }
