--- a/src/body/sections/PastPhotos.scss
+++ b/src/body/sections/PastPhotos.scss
@@ -1,1 +1,13 @@
 @import "react-alice-carousel/lib/scss/alice-carousel.scss";
+@import "../../shared/style/colour-theme.scss";
+@import "../../shared/style/font.scss";
+
+
+.PastPhotos {
+    h1 {
+        @include industry-bold();
+        color: $green;
+        padding: 5%;
+        padding-bottom: 0%;
+    }
+}
