--- a/src/body/sections/Committee.scss
+++ b/src/body/sections/Committee.scss
@@ -35,5 +35,13 @@
                 box-shadow: 5px inset;
             }
         }
+        @media screen and (max-width: 600px) {
+            margin-top: 5vh;
+            justify-content: center;
+            a {
+                width: 20vw;
+                margin-right: 0;
+            }
+        }
     }
 }
