--- a/src/body/sections/Sponsors.scss
+++ b/src/body/sections/Sponsors.scss
@@ -1,29 +1,41 @@
-@import '../../shared/style/colour-theme.scss';
-@import '../../shared/style/font.scss';
-@import '../../shared/style/util.scss';
+@import "../../shared/style/colour-theme.scss";
+@import "../../shared/style/font.scss";
+@import "../../shared/style/util.scss";
 
 .Sponsors {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    h1 {
-        @include industry-bold();
-    }
-    h2 {
-        @include industry-simple();
-    }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  h1 {
+    @include industry-bold();
+  }
+  h2 {
+    @include industry-simple();
+  }
 
-    .hex-cohost {
+  .hex-cohost {
+    // Customize grid for our use case
+    margin: 0%;
+    padding: 0%;
+    display: flex;
+    justify-content: center;
+    section {
+      width: 100%;
+      margin: 0%;
+      a {
         margin: 0%;
-        padding: 0%;
-        display: flex;
-        justify-content: center;
-        section {
-            width: 100%;
-            margin: 0%;
-            article {
-                margin: 0%;
-            }
-        }
+      }
     }
+  }
+  .HexGrid {
+    section a img {
+      width: 80%;
+      height: auto;
+      object-position: 50% 50%;
+      clip-path: none;
+    }
+    section {
+      margin-bottom: 5%;
+    }
+  }
 }
