--- a/src/footer/MailingListForm.scss
+++ b/src/footer/MailingListForm.scss
@@ -1,26 +1,35 @@
+@import '../shared/style/util.scss';
+@import '../shared/style/font.scss';
+@import '../shared/style/colour-theme.scss';
+
+
 .MailingListForm {
     min-height: 40px;
+    width: 100%;
+    display: flex;
 }
 
 #mailing-list-email {
-    background-color: gray;
+    @include glassmorphism();
     margin-right: 10px;
     height: 100%;
     border-style: none;
     border-radius: 4%;
+    flex: 5;
 }
 
 #mailing-list-submit {
+    flex: 1;
     height: 100%;
     color: white;
-    background-color: dodgerblue;
-    border-radius: 4%;
+    background-color: $blue;
+    border-radius: 10%;
     border-style: none;
 }
 
 #mailing-list-submit:hover {
-    background-color: white;
-    color: dodgerblue;
+    background-color: rgba(255, 255, 255, 0.4);
+    color: $blue;
     box-shadow: 2px inset;
 }
 
