--- a/src/body/components/FAQTextBox.scss
+++ b/src/body/components/FAQTextBox.scss
@@ -1,16 +1,26 @@
 @import "../../shared/style/util.scss";
+@import '../../shared/style/font.scss';
+@import '../../shared/style/colour-theme.scss';
+
 
 .FAQTextBox {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 2%;
-    padding: 10px;
     @include glassmorphism();
     border-radius: 5px;
+    line-height: 150%;
+    font-size: calc(min(0.5in, 2vh));
 }
 
 .FAQ-button {
+    p {
+        @include industry-simple();
+        color: $white;
+        font-size: calc(min(0.2in, 3vw));
+        text-align: left;
+    }
     max-width: 800px;
     border: 1px solid rgba(3, 169, 244, 0);
     border-radius: 10px;
@@ -24,3 +34,10 @@
     //background-color: rgba(100, 255, 100, 0.1);
     transition: height 500ms;
   }
+
+.text{
+    @include industry-simple();
+    color: $white;
+    font-size: calc(min(0.2in, 3vw));
+    padding: 5%;
+}
