--- a/src/body/sections/AboutUs.scss
+++ b/src/body/sections/AboutUs.scss
@@ -17,42 +17,57 @@
 .about-us-col-1 {
     margin-right: 10px;
     flex: 3;
+    margin-left: 5%;
     h1 {
         @include industry-bold();
+        font-size: calc(min(0.7in, 8vw));
         color: $green;
+    }
+    h2 {
+        @include industry-bold();
+        font-size: calc(min(0.4in, 4vw));
+        color: $green;
+        margin-top:-5%;
+        margin-left: 0.5%;
     }
     .about-us-with-dec {
         display: flex;
         p {
             @include industry-simple();
             @include glassmorphism();
-            border-radius: 12px;
-            padding: 10px;
+            border-radius: 8px;
+            padding: calc(min(30px, 10%));
             color: $white;
+            line-height: 150%;
+            font-size: calc(min(0.5in, 2vh));
+            min-width: 50vw;
         }
         .about-us-dec {
             max-width: 7vw;
         }
         #about-us-cone {
             transform: rotate(-15deg);
-            max-width: 5vw;
-            margin-top: -5%;
+            max-width: calc(max(1in, 5vw));
+            margin-top: -60%;
         }
         #about-us-donut {
             transform: rotate(30deg);
-            margin-left: -30%;
+            max-width: calc(max(1in, 5vw));
+            margin-left: -5%;
         }
 
         #about-us-sphere {
-            max-width: 4vw;
+            max-width: calc(max(1in, 4vw));
+            margin-left: -60%;
+            margin-top: calc(440px - 20vw);
         }
     }
 }
 
 .about-us-col-2 {
-    margin-top: -10%;
+    margin-top: 5%;
     margin-left: 10px;
-    flex: 2;
+    flex: 1.5;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -62,6 +77,7 @@
         max-height: 40vh;
     }
     img:nth-child(2) {
+        padding-top: 10%;
         max-width: 20vw;
     }
     @media screen and (max-width: 960px) {
