--- a/src/body/sections/Landing.scss
+++ b/src/body/sections/Landing.scss
@@ -21,6 +21,7 @@
 }
 
 .landing-bg {
+    opacity: 80%;
     position: absolute;
     background-repeat: no-repeat;
     background-size: 100vw;
@@ -42,6 +43,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-left: 5%;
 }
 
 .landing-col1 > * {
@@ -60,7 +62,7 @@
 }
 
 .landing-col1 .landing-hc-title-small {
-    font-size: xxx-large;
+    font-size: calc(min(1.2in, 6vh));
     margin-bottom: -2%;
 }
 
@@ -77,17 +79,18 @@
 
 .landing-date {
     @include industry-bold();
-    font-size: xxx-large;
+    font-size: calc(min(1.2in, 6vh));
     color: $white;
     margin-bottom: 10px;
     margin-top: 0%;
 }
 
 .landing-col1 > p {
+    color: rgb(255, 255, 255);
     margin-top: 10px;
     @include industry-simple();
-    color: $white;
-    max-width: 350px;
+    max-width: 400px;
+    text-align: justify;
 }
 
 .landing-col2 {
@@ -95,6 +98,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-right: 5%;
 }
 
 @media screen and (max-width: 1280px) {
