--- a/src/footer/Footer.scss
+++ b/src/footer/Footer.scss
@@ -16,6 +16,7 @@
         h1 {
             @include industry-bold();
             color: $blue;
+            font-size: calc(min(0.4in, 4vw));;
         }
         .MailingListForm {
             height: 5vh;
@@ -30,7 +31,7 @@
             display: block;
             border-radius: 50%;
             img {
-                width: 7vw;
+                width: 5vw;
             }
             padding: 10%;
         }
