--- a/src/header/components/Logo.scss
+++ b/src/header/components/Logo.scss
@@ -7,13 +7,14 @@
 }
 
 .HC-logo {
-    height: calc(max(2vw, 50px));
+    height: calc(max(1.5vw, 35px));
     margin-right: 10px;
 }
 
 .Logo h1 {
     white-space: nowrap;
     @include industry-bold();
+    font-size: calc(min(0.5in, 3vh));
 }
 
 @media screen and (max-width:480px) {
