[FRONT PAGE] Finalized

--- a/src/body/sections/AboutUs.scss
+++ b/src/body/sections/AboutUs.scss
@@ -33,7 +33,7 @@
     .about-us-with-dec {
         display: flex;
         p {
-            @include industry-simple();
+            @include open-sans();
             @include glassmorphism();
             border-radius: 8px;
             padding: calc(min(30px, 10%));
