--- a/src/body/components/FAQTextBox.scss
+++ b/src/body/components/FAQTextBox.scss
@@ -8,7 +8,6 @@
     flex-direction: column;
     align-items: center;
     margin: 2%;
-    @include glassmorphism();
     border-radius: 5px;
     line-height: 150%;
     font-size: calc(min(0.5in, 2vh));
@@ -36,7 +35,7 @@
   }
 
 .text{
-    @include industry-simple();
+    @include open-sans();
     color: $white;
     font-size: calc(min(0.2in, 3vw));
     padding: 5%;
