--- a/src/body/components/HexGrid.scss
+++ b/src/body/components/HexGrid.scss
@@ -23,12 +23,13 @@
     --Nhexa: var(--Nhexa-big);
   }
   @media only screen and (max-width: 600px) {
-    --Nhexa: 2;
+    --Nhexa: var(--Nhexa-small);
   }
   @include industry-simple();
   font-size: 1rem;
 
   margin-right: calc(var(--size) * 0.7);
+
   // overflow-x: visible;
   width: fit-content;
   hyphens: auto;
@@ -53,12 +54,12 @@
     margin-right: calc(var(--size) / 2);
     color: #fff;
     overflow: hidden;
-    @media screen and (min-width: 600px) {
+    //@media screen and (min-width: 600px) {
       &:nth-child(2n) {
         margin: calc(var(--size) * -0.5) calc(var(--size) * -0.25) 0
           calc(var(--size) * -0.75);
       }
-    }
+    //}
     img {
       width: var(--size);
       height: var(--size);
@@ -89,6 +90,7 @@
     }
     p {
       text-align: center;
+      width: 110%;
     }
     &:hover {
       img {
@@ -100,17 +102,18 @@
       }
     }
   }
-  @if var(--Nhexa-big)!=1 {
-    @media screen and (max-width: 600px) {
-      margin-right: inherit;
-      section {
-        display: flex;
-        flex-direction: column;
-        margin-top: 0;
-      }
-      a {
-        margin-right: inherit;
-      }
-    }
-  }
+  // @if var(--Nhexa-small)==1 {
+  //   @media screen and (max-width: 600px) {
+  //     margin-right: inherit;
+  //     section {
+  //       display: flex;
+  //       flex-direction: column;
+  //       margin-top: 0;
+  //     }
+  //     a {
+  //       margin-right: inherit;
+  //     }
+  //   }
+  // }
+  
 }
