--- a/src/body/components/PastPhotoItem.scss
+++ b/src/body/components/PastPhotoItem.scss
@@ -20,6 +20,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        text-align: center;
         visibility: hidden;
     }
     &:hover {
