--- a/src/body/components/Timer.scss
+++ b/src/body/components/Timer.scss
@@ -8,10 +8,12 @@
     align-items: center;
     margin: 0%;
     padding: 10px;
+    padding-top: 5%;
+    padding-bottom: 5%;
     @include glassmorphism();
     border-radius: 12px;
     min-width: calc(min(1.5in, 15vh)*6);
-    min-height: 30%;
+    min-height: 10%;
 }
 
 .Timer > * {
@@ -22,11 +24,23 @@
     color: $white;
     font-size: calc(min(1.5in, 15vh));
     margin-bottom: 0%;
-    margin-top: 5%;
+    margin-top: 0%;
 }
 
 .Timer h3 {
     margin-top: 0%;
     margin-bottom: 0%;
     color: white;
+}
+
+@media screen and (max-width:1000px) {
+    .Timer {
+        h1 {
+            font-size: xx-large;
+        }
+        h3 {
+            font-size: large;
+        }
+        min-width: fit-content;
+    }
 }
