--- a/src/body/sections/FAQ.scss
+++ b/src/body/sections/FAQ.scss
@@ -30,10 +30,16 @@
         margin-left: -40%;
         .faq-col-3-1{
             padding-left: 10%;
+            & > *{
+                @include glassmorphism();
+            }
         }
         
         .faq-col-3-2{
             max-width: 80%;
+            & > *{
+                @include glassmorphism();
+            }
         }
     }
 
