[FRONT PAGE] corrected opacity to decimals to avoid react build pb

--- a/src/body/sections/Landing.scss
+++ b/src/body/sections/Landing.scss
@@ -21,7 +21,7 @@
 }
 
 .landing-bg {
-    opacity: 80%;
+    opacity: .8;
     position: absolute;
     background-repeat: no-repeat;
     background-size: 100vw;
