--- a/src/body/components/HexGrid.scss
+++ b/src/body/components/HexGrid.scss
@@ -26,7 +26,7 @@
     --Nhexa: var(--Nhexa-small);
   }
   @include industry-simple();
-  font-size: 1rem;
+  //font-size: large;
 
   margin-right: calc(var(--size) * 0.7);
 
@@ -53,7 +53,7 @@
     clip-path: polygon(25% 0, 75% 0, 100% 50%, 75% 100%, 25% 100%, 0 50%);
     margin-right: calc(var(--size) / 2);
     color: #fff;
-    overflow: hidden;
+    overflow:visible;
     //@media screen and (min-width: 600px) {
       &:nth-child(2n) {
         margin: calc(var(--size) * -0.5) calc(var(--size) * -0.25) 0
@@ -87,10 +87,26 @@
     }
     h2 {
       text-align: center;
+      font-size: large;
+      overflow: visible;
+      @media screen and (min-width: 1100px) {
+        font-size: small;
+      }
+      @media screen and (max-width: 600px) {
+        font-size: 1rem;
+      }
     }
     p {
       text-align: center;
       width: 110%;
+      overflow: visible;
+      font-size: medium;
+      @media screen and (min-width: 1100px) {
+        font-size: x-small;
+      }
+      @media screen and (max-width: 600px) {
+        font-size: 1rem;
+      }
     }
     &:hover {
       img {
