--- a/src/body/sections/Committee.scss
+++ b/src/body/sections/Committee.scss
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: 10%;
+    margin-right: 3%;
     h1 {
         @include industry_bold();
         color: $blue;
