--- a/src/body/sections/SponsorShowcase.scss
+++ b/src/body/sections/SponsorShowcase.scss
@@ -60,7 +60,7 @@
   }
   p {
     @include helvetica();
-    font-size: larger;
+    font-size: medium;
     height: fit-content;
     @media screen and (max-width: 1024px){
       font-size: small;
