[Sponsor showcase] small changes and adjustments with the card

--- a/src/body/sections/SponsorShowcase.scss
+++ b/src/body/sections/SponsorShowcase.scss
@@ -60,7 +60,7 @@
     margin-bottom: 10px;
   }
   .sponsor-logo-active {
-    background-position: left;
+    background-position: center;
     min-height:40px;
     transition: transform 300ms;
   }
