--- a/src/body/sections/SponsorShowcase.scss
+++ b/src/body/sections/SponsorShowcase.scss
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 30px;
   h1 {
     text-align: left;
     min-width: 80%;
