Changed front page for apps closed

--- a/src/body/sections/Landing.scss
+++ b/src/body/sections/Landing.scss
@@ -127,6 +127,9 @@
             height: max-content;
         }
     }
+    .apps-closed {
+        background-color: rgba(95, 95, 95, 0.973);
+    }
 }
 
 
